--- a/main.css
+++ b/main.css
@@ -111,22 +111,26 @@ min-height: 115vh;
 
 /* project section */
 
-.container-work{
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+.container-work{ 
     background: url(Web-design/pink-bg.png);
-    background-size: cover;
+    background-size: cover; 
     min-height: 100vh;
 }
 
+#card-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    min-height: 90vh;
+}
+
 .project-card {
-    position: relative;
     width: 200px;
     height: 200px;
     margin: 10px;
     background-color: #53D3E3;
-    /* overflow: hidden; */
+    overflow: hidden;
 }
 
 #weatherapp {
@@ -137,6 +141,34 @@ min-height: 115vh;
    align-items: center;
    padding-left: 27%;
 }
+#todoapp {
+    max-height: 100%;
+    padding: 6px;
+    padding-left: 10%;
+ }
+
+ #plantapp {
+    max-height: 100%;
+    max-width: 100%;
+    padding: 6px;
+    padding-top: 20%;
+ }
+
+ #bubbleteaapp {
+    max-height: 100%;
+    padding: 6px;
+    align-items: center;
+    padding-left: 20%;
+    
+ }
+
+ #rqm {
+     width: 100%;
+     height: 100%;
+    object-fit: contain;
+    padding: 10px;
+    align-items: center;
+ }
 
 /* certificate section */
 
@@ -148,5 +180,21 @@ min-height: 115vh;
 
 ul {
     list-style: none;
+}
+
+.cert-holder {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    align-content: space-around;
+    
+}
+
+#cert-img {
+    padding: 10px;
+    margin: 30px;
+    background: #EF7676;
+   
 }
 
