--- a/main.css
+++ b/main.css
@@ -122,7 +122,7 @@ min-height: 115vh;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    min-height: 90vh;
+    min-height: 100vh;
 }
 
 .project-card {
@@ -130,17 +130,46 @@ min-height: 115vh;
     height: 200px;
     margin: 10px;
     background-color: #53D3E3;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
-#weatherapp {
-   max-height: 100%;
-   padding: 6px;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   padding-left: 27%;
+
+
+.project-card:hover .project-text {
+    color: white;
+    transform: scale(1.1);
+    opacity: 1;    
+ }
+
+ .project-card:hover {
+    transform: scale(1.5);
+ }
+
+
+
+.project-text {
+    color: white;
+    font-size: 15px;
+    font-weight: bold;
+    text-align: center;
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    transform: translate(0%, 0%);
+
+
 }
+
+
+#weatherapp {
+    max-height: 100%;
+    padding: 6px;
+    display: flex;
+    padding-left: 27%;
+ }
+
+
+
 #todoapp {
     max-height: 100%;
     padding: 6px;
@@ -148,11 +177,36 @@ min-height: 115vh;
  }
 
  #plantapp {
-    max-height: 100%;
-    max-width: 100%;
-    padding: 6px;
-    padding-top: 20%;
+    margin: 20px;
  }
+
+ /* project caption text  */
+
+#weatherapptext {
+    
+    
+    margin-left: 55px;
+    
+}
+
+#todoapptext {
+    margin-left: 55px;
+}
+
+#bubteaapptext {
+    margin-left: 10px;
+}
+
+ #plantdetectapptext {
+    margin-top: 20px;
+    margin-left: 30px;
+ }
+
+ #rqmtext { 
+     margin-left: 10px; 
+    }
+
+ /* end project caption text */
 
  #bubbleteaapp {
     max-height: 100%;
