--- a/main.css
+++ b/main.css
@@ -47,6 +47,13 @@ min-height: 115vh;
     font-family: 'Karla', sans-serif;
 }
 
+#nav-contact-btn {
+    font-size: 20px;
+    color: black;
+    padding: 35px;
+    font-family: 'Karla', sans-serif;
+}
+
 #welcome-text {
     margin-top: 40vh;
     margin-left: 0; 
@@ -117,13 +124,24 @@ min-height: 115vh;
     min-height: 100vh;
 }
 
+#project-head {
+    font-size: 4vw;
+    font-family: 'Karla', sans-serif;
+    font-weight: bold;
+    text-align: center;
+    padding-top: 10vh;
+    margin-left: 15px;
+}
+
 #card-wrapper {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    padding-bottom: 100px;
 }
+
 
 .project-card {
     width: 200px;
@@ -156,8 +174,6 @@ min-height: 115vh;
     opacity: 0;
     position: absolute;
     transform: translate(0%, 0%);
-
-
 }
 
 
@@ -183,10 +199,7 @@ min-height: 115vh;
  /* project caption text  */
 
 #weatherapptext {
-    
-    
-    margin-left: 55px;
-    
+    margin-left: 55px; 
 }
 
 #todoapptext {
@@ -224,6 +237,8 @@ min-height: 115vh;
     align-items: center;
  }
 
+/* Project page */
+
 /* certificate section */
 
 #container-cert{
@@ -236,19 +251,91 @@ ul {
     list-style: none;
 }
 
+#cert-head {
+    text-align: center;
+    font-size: 3vw;
+    font-family: 'Karla', sans-serif;
+    font-weight: bold;
+    padding-top: 50px;
+}
+
 .cert-holder {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     align-items: center;
-    align-content: space-around;
-    
+    align-content: space-around;  
 }
 
 #cert-img {
     padding: 10px;
     margin: 30px;
     background: #EF7676;
-   
 }
+
+#cert-img:hover {
+    transform: scale(1.3);
+
+}
+
+/* footer */
+
+#footer {
+    background: #53D3E3;
+    min-height: 40vh;
+    background-size: cover;
+
+}
+
+#footer-header {
+    text-align: center;
+    font-size: 2vw;
+    font-family: 'Karla', sans-serif;
+    font-weight: bold;
+    padding-top: 40px;
+}
+
+#footer-email {
+    text-align: center;
+    font-size: 1.5vw;
+    font-family: 'Karla', sans-serif;
+    font-weight: bold;
+    padding-top: 9px;
+}
+
+.socialmedia-container {
+  display: flex;
+  justify-content: center;
+  align-content: space-around;
+  font-size: 4vw;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+#github {
+  padding: 7px;
+}
+
+#codepen {
+ padding: 7px;
+}
+
+#linkedin {
+  padding: 7px;
+}
+
+#instagram { 
+ padding: 7px;
+}
+
+#copyright-text {
+    font-size: 1vw;
+  padding-top: 7vh;
+  padding-bottom: 3vh;
+ text-align: center;
+}
+
+
+
+/* end footer */
 
